--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
